changed wording on selection about

--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -16,13 +16,7 @@
 <article >
 	<h1>Selection</h1>
 	
-	<p><!--The most basic concept of jQuery is to "select some elements and do something with them".
-	 jQuery supports most CSS3 selectors, as well as some non-standard selectors.
-	 
-	 This is plagarism lincong  please alter it
-	 -->
-	 We handpicked a couple most frequently used jQuery selectors/functions to demonstrate the power of jQuery 
-	 Below are several demos that typify how these jQuery selectors are used in conjuction with JavaScript.</p>	
+	<p>Selection is the most essential functionality that jQuery is equipped with. Developers can then modify their selection accordingly. Most CSS3 selectors, along with some non-standard ones, are supported by jQuery. We handpicked a couple most frequently used jQuery selectors/functions to demonstrate the power of jQuery. Below are several demos that typify how these jQuery selectors are used in conjuction with JavaScript.</p>	
 
 	
 	<div class="all-questions">
