--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -15,10 +15,10 @@
 <div class = "center" id = "border">
 <p>Here is a list of actions you can perform. addClass() add green class to songs that were red. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on Change Color button.</p>
   <ol>
-    <li>Click the Hide button to hide the first 4 songs from the list</li>
-    <li>Click the Change Color button to change red songs to green ones</li>
+    <li>Click on the Hide button to hide the first 4 songs from the list</li>
+    <li>Click on the Change Color button to change red songs to green ones</li>
     <li>Mouse over the Change Color button to see fadein and fadeout</li>
-    <li>Click any song to change font color to purple</li>
+    <li>Click on any song to change font color to purple</li>
   </ol>
 </div>
 <div class = "center" >
