--- a/web-app/selection/selection2.html
+++ b/web-app/selection/selection2.html
@@ -29,7 +29,7 @@
 
               <p>.clone() creates a deep copy of the set of matched elements.
                The downside of .clone() is that it produces elements with duplicate id attributes, which are supposed to be unique.
-                Click the first image on each row to make clones; click any clone to remove clones:
+                Click on the first image on each row to make clones; click on any clone to remove it:
               </p>
                 
               <div><img class="mario" src="img/mario.png" alt="Mario" width="80" height="100"></div>
