fix broken link

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -28,7 +28,7 @@
 			<!--<li class="active"><a href="index.html">Home</a></li>-->
 			<li><a href="selection/index.html">Selection</a></li>
 			<li><a href="animation/index.html">Animation</a></li>
-			<li><a href="Ajax/index.html">AJAX</a></li>
+			<li><a href="ajax/index.html">AJAX</a></li>
 			<li><a href="jquerymobile/index.html">JQuery Mobile</a></li>
 			<li><a href="attributes/index.html">Attributes</a></li>
 		</ul>
@@ -36,8 +36,6 @@
 			<br>
 			<p><a class="btn btn-primary btn-lg f-right" href="https://csil-git1.cs.surrey.sfu.ca/awesomegroup/tech-eval-demo">Access the Git</a>
 			<a class="btn btn-primary btn-lg f-right" href="https://jquery.com">Get jQuery</a></p>
-			
-		
 		</div>
 		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
