--- a/web-app/attributes/index.html
+++ b/web-app/attributes/index.html
@@ -11,16 +11,17 @@
 		<article style="max-width: 50em; background: white; padding: 2em; margin: 1em auto;">
 			<h1>Attributes</h1>
 			<div class="all-questions">
+				<p>One of jQuery's most commonly used features is manipulating the attributes of a DOM. Attributes are fields added to the tag in the HTML, such as style, class, id and etc... The ability to manipulate DOM attributes gives the developer the ability to create dynamic website without having to request a new webpage from the server.</p>
+			</div>
+			<div class="all-questions">
 				<ul>
-					<li><h3><a href="about.html">About</a></h3></li>
-					<li><h3><a href="demo1.html">Attributes Demo1</a></h3></li>
+					<li><h3><a href="demo1.html">Attributes Demo 1</a></h3></li>
 				</ul>
 			</div>
+			<div id="bottom_nav">
+				<hr />
+				<a href="../index.html">Up:Home</a>
 			</div>
-	<div id="bottom_nav">
-	<hr>
-	<a href="../index.html">Up:Home</a>
-	</div>
 		</article>
 	</body>
 </html>
