fixed wording in about page(animation)

--- a/web-app/animation/about.html
+++ b/web-app/animation/about.html
@@ -18,7 +18,8 @@
   margin: 1em auto;">
 	<h1>Animation</h1>
 	
-	
+	<p>jQuery has a lot of built-in functions that allow developers to create simple 
+animations with almost no effort. Below are demonstration of simple animations that can be easily implemented using jQuery.</p>
 	
 	<div class="all-questions">
 		
