--- a/web-app/animation/about.html
+++ b/web-app/animation/about.html
@@ -25,7 +25,7 @@ animations with almost no effort. Below are demonstration of simple animations t
 		
 		<p>Animation Demo 1 Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>
 
-		<p>Animation Demo 2 Description: With animate() and setTimeout() functions, we can easily create an automatic image slider. Every 2 seconds, animate() function moves the image to the left. After we see the last slide, it goes back to the first slide and continues.</p>
+		<p>Animation Demo 2 Description: With animate() and setInterval() functions, we can easily create an automatic image slider. Every 2 seconds, animate() function moves the image to the left. After we see the last slide, it goes back to the first slide and continues.</p>
 		
 		
 	</div>
