fix indentation, remove unnecessary white space

--- a/web-app/ajax/ajaxdemo.html
+++ b/web-app/ajax/ajaxdemo.html
@@ -9,8 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Ajax</title>
-		
-		    <!-- code colorization -->
+		<!-- code colorization -->
         <link rel="stylesheet" href="../lib/highlight/styles/dracula.css">
 		<script src="../lib/highlight/highlight.pack.js"></script>
 		<script>
@@ -25,39 +24,27 @@
 			});
 		});
 		</script>
-
-
 	</head>
 	<body >
 		<article >
 			<h1>Ajax Demo</h1>
 			<div class="all-questions">
                 <p>The example shown below utilizes JSONPlaceholder to show ajax requests<p>
-                
                 <div><p id="ajax-result"><p></div>
                 <button id="ajax-requestButton">Ajax Request</button>
 			</div>
-			</div>
-			
 			<div>
-				<p> 
-				We can also use AJAX to have this page describe itself, notice how jQuery is used to colorize the code in this block.
-				Be honest, that's pretty mind blowingly meta.
-				</p>
+				<p>We can also use AJAX to have this page describe itself, notice how jQuery is used to colorize the code in this block. Be honest, that's pretty mind blowingly meta.</p>
 				<div class="codesnippet">
-
 					  <!-- Escaped code so tags aren't interprsted as html --> 
 					<pre><code class="html"></code></pre>
 				</div>
-      </div>
-			
-	<div id="bottom_nav">
-	<hr>
-	<a href="index.html">Up:Index</a>
-	</div>
+      		</div>
+			<div id="bottom_nav">
+				<hr />
+				<a href="index.html">Up:Index</a>
+			</div>
 		</article>
 		<script type="text/javascript" src="ajax.js"></script>
-
-		
 	</body>
 </html>
