--- a/web-app/ajax/index.html
+++ b/web-app/ajax/index.html
@@ -8,34 +8,27 @@
 		<title>Ajax</title>
 		<link rel="stylesheet" type="text/css"  href="../style.css">
 		<link rel="stylesheet" type="text/css"  href="style.css">
-		
 	</head>
 	<body >
 		<article >
 			<h1>Ajax</h1>
-			<p> AJAX allows web applications to interact with the server, without loading a new page.
-			Historically AJAX was one of the core features of jQuery, because browser vendors had not
-			yet decided on the same API.  Ajax can be invoked using jQuery in a variety of ways, notably:
-			</p>
-			
+			<p>AJAX allows web applications to interact with the server, without loading a new page. Historically AJAX was one of the core features of jQuery, because browser vendors had not yet decided on the same API.  Ajax can be invoked using jQuery in a variety of ways, notably:</p>
 			<div>
-			<code> $("selector").load("path");</code> Which replaces the inner html of the target elements with the loaded data.
+				<code> $("selector").load("path");</code> Which replaces the inner html of the target elements with the loaded data.
 			</div>
 			and
 			<div>
-			<code> $.get("path",&lt;handler&gt;)</code> Which allows custo handling of response text.
+				<code> $.get("path",&lt;handler&gt;)</code> Which allows custo handling of response text.
 			</div>
-			
 			<div class="all-questions">
 				<ul>
 					<li><h3><a href="ajaxdemo.html">Ajax Demo 1</a></h3></li>
 				</ul>
 			</div>
+			<div id="bottom_nav">
+				<hr>
+				<a href="../index.html">Up:Home</a>
 			</div>
-	<div id="bottom_nav">
-	<hr>
-	<a href="../index.html">Up:Home</a>
-	</div>
 		</article>
 	</body>
 </html>
