--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -1,60 +1,55 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Selection Demo</title>
-
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="stylesheet" href="selection.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel='stylesheet' type='text/css' href='../style.css'/>
-</head>
-<body>
-
-<article>
-<div class = "center" id = "border">
-<p>Here is a list of actions you can perform. addClass() add green class to songs that were red. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on Change Color button.</p>
-  <ol>
-    <li>Click on the Hide button to hide the first 4 songs from the list</li>
-    <li>Click on the Change Color button to change red songs to green ones</li>
-    <li>Mouse over the Change Color button to see fadein and fadeout</li>
-    <li>Click on any song to change font color to purple</li>
-  </ol>
-</div>
-<div class = "center" >
-  <ol class = "demo">
-    <li>Your Star</li>
-    <li>Swing, Swing</li>
-    <li class = "red">Time Stands Still</li>
-    <li>One More Sad Song</li>
-    <li>Why Worry</li>
-    <li>Don't Leave Me</li>
-    <li>Too Far Gone</li>
-    <li>Drive Away</li>
-    <li class = "red">Happy Endings</li>
-    <li>Crown Of Love</li>
-    <li>In The Backseat</li>
-    <li>Myth</li>
-    <li class = "red">Lazuli</li>
-    <li>Evaporated</li>
-    <li>Touch It / Technologic</li>
-    <li>Haiti</li>
-  </ol>
-  <p class = "text"> There is no green li </p>
-
-
-  <button type="button" id="hide">Hide</button>
-  <button type="button" id="changeColor">Change Color</button>
-
- <div id="bottom_nav">
-	<hr>
-	<ul>
-	<li><a href="index.html">Up:Index</a></li>
-	<li><a href="selection2.html">Next:Selection Demo 2: Cloning</a></li>
-	</ul>
-</div>
- </div>
-</article>
-<script src="selection.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Selection Demo</title>
+		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+		<link rel="stylesheet" href="selection.css" />
+		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="../style.css" />
+	</head>
+	<body>
+		<article>
+			<div class="center" id="border">
+				<p>Here is a list of actions you can perform. addClass() add green class to songs that were red. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on Change Color button.</p>
+				<ol>
+					<li>Click on the Hide button to hide the first 4 songs from the list</li>
+					<li>Click on the Change Color button to change red songs to green ones</li>
+					<li>Mouse over the Change Color button to see fadein and fadeout</li>
+					<li>Click on any song to change font color to purple</li>
+				</ol>
+			</div>
+			<div class="center" >
+				<ol class="demo">
+					<li>Your Star</li>
+					<li>Swing, Swing</li>
+					<li class="red">Time Stands Still</li>
+					<li>One More Sad Song</li>
+					<li>Why Worry</li>
+					<li>Don't Leave Me</li>
+					<li>Too Far Gone</li>
+					<li>Drive Away</li>
+					<li class="red">Happy Endings</li>
+					<li>Crown Of Love</li>
+					<li>In The Backseat</li>
+					<li>Myth</li>
+					<li class="red">Lazuli</li>
+					<li>Evaporated</li>
+					<li>Touch It / Technologic</li>
+					<li>Haiti</li>
+				</ol>
+				<p class="text"> There is no green li</p>
+				<button type="button" id="hide">Hide</button>
+				<button type="button" id="changeColor">Change Color</button>
+				<div id="bottom_nav">
+					<hr />
+					<ul>
+						<li><a href="index.html">Up:Index</a></li>
+						<li><a href="selection2.html">Next:Selection Demo 2: Cloning</a></li>
+					</ul>
+				</div>
+			</div>
+		</article>
+		<script src="selection.js"></script>
+	</body>
 </html>
