--- a/web-app/animation/animation2.html
+++ b/web-app/animation/animation2.html
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Animation Demo2</title>
-    <link rel='stylesheet' type='text/css' href='animation2.css'/>
-    <link rel='stylesheet' type='text/css' href='../style.css'/>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js"></script>
-    <script type='text/javascript' src='animation2.js'></script>
-  </head>
-  
-  <body>
-  
-  <div>
-  
-	  <div>
-   
-	   <p>
-		Animation Demo 2 Description: With animate() and setTimeout() functions, we can easily create an automatic image slider. Every 2 seconds, animate() function moves the image to the left. After we see the last slide, it goes back to the first slide and continues.
-	   </p>
-	  </div>
-  
-  
-	  </div>
-		  <div class="container"> 
-			<div id = "slider">
-			  <ul class="slides">
-				<li class="slide"><img src="cat1.jpg"/></li>
-				<li class="slide"><img src="cat2.jpg"/></li>
-				<li class="slide"><img src="cat3.jpg"/></li>
-				<li class="slide"><img src="cat1.jpg"/></li>
-			  </ul>
+	<head>
+		<title>Animation Demo2</title>
+		<link rel='stylesheet' type='text/css' href='animation2.css'/>
+		<link rel='stylesheet' type='text/css' href='../style.css'/>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js"></script>
+		<script type='text/javascript' src='animation2.js'></script>
+	</head>
+	<body>
+		<div>
+			<div>
+				<p>Animation Demo 2 Description: With animate() and setTimeout() functions, we can easily create an automatic image slider. Every 2 seconds, animate() function moves the image to the left. After we see the last slide, it goes back to the first slide and continues.</p>
 			</div>
-		  </div>
-	
-		<div id="bottom_nav">
-		<hr>
-		<a href="index.html">Up: Home</a>
+			<div class="container"> 
+				<div id = "slider">
+					<ul class="slides">
+						<li class="slide"><img src="cat1.jpg"/></li>
+						<li class="slide"><img src="cat2.jpg"/></li>
+						<li class="slide"><img src="cat3.jpg"/></li>
+						<li class="slide"><img src="cat1.jpg"/></li>
+					</ul>
+				</div>
+			</div>
+			<div id="bottom_nav">
+				<hr />
+				<a href="index.html">Up: Home</a>
+			</div>
 		</div>
-	
-	</div>
-  </body>
-
+	</body>
 </html>
