--- a/web-app/animation/index.html
+++ b/web-app/animation/index.html
@@ -1,53 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Animation Demo</title>
 		<link rel="stylesheet" type="text/css"  href="../style.css">
 		<link rel="stylesheet" type="text/css"  href="style.css">
-		
 	</head>
-
-
-<body>
-<article >
-	<h1>Animation</h1>
-	
-	<div>
-	
-	<p>
-	<!--
-	The jQuery library provides several techniques for adding animation to a web page. These include simple, standard animations that are frequently used, and the ability to craft sophisticated custom effects. We provide several demos that typify how animations work in jQuery</p>
-	This is plagarism lincong please alter it or cite it
-	 -->
-	</div>
-	
-	
-	<div class="all-questions">
-
-		<ul>
-				<li><h3><a href="about.html">About</a></h3></li>
-				<li><h3><a href="animation.html">Animation Demo 1</a></h3></li>
-				<li><h3><a href="animation2.html">Animation Demo 2</a></h3></li>
-			
-		</ul>
-
-	</div>
-	
-	<div id="bottom_nav">
-	<hr>
-	<a href="../index.html">Up: Home</a>
-	</div>
-	
-</article>
-
-</body>
+	<body>
+		<article>
+			<h1>Animation</h1>
+			<!--<div>
+			<p>
+			The jQuery library provides several techniques for adding animation to a web page. These include simple, standard animations that are frequently used, and the ability to craft sophisticated custom effects. We provide several demos that typify how animations work in jQuery</p>
+			This is plagarism lincong please alter it or cite it
+			</div>-->
+			<div class="all-questions">
+				<ul>
+						<li><h3><a href="about.html">About</a></h3></li>
+						<li><h3><a href="animation.html">Animation Demo 1</a></h3></li>
+						<li><h3><a href="animation2.html">Animation Demo 2</a></h3></li>
+				</ul>
+			</div>
+			<div id="bottom_nav">
+				<hr>
+				<a href="../index.html">Up: Home</a>
+			</div>
+		</article>
+	</body>
 </html>
-
-
-
-
-
