remove animation about

--- a/web-app/animation/index.html
+++ b/web-app/animation/index.html
@@ -11,14 +11,11 @@
 	<body>
 		<article>
 			<h1>Animation</h1>
-			<!--<div>
-			<p>
-			The jQuery library provides several techniques for adding animation to a web page. These include simple, standard animations that are frequently used, and the ability to craft sophisticated custom effects. We provide several demos that typify how animations work in jQuery</p>
-			This is plagarism lincong please alter it or cite it
-			</div>-->
+			
+			<p>jQuery has a lot of built-in functions that allow developers to create simple animations with almost no effort. Below are demonstration of simple animations that can be easily implemented using jQuery.</p>
+			
 			<div class="all-questions">
 				<ul>
-						<li><h3><a href="about.html">About</a></h3></li>
 						<li><h3><a href="animation.html">Animation Demo 1</a></h3></li>
 						<li><h3><a href="animation2.html">Animation Demo 2</a></h3></li>
 				</ul>
