Changed UI of the Selection section

--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css"  href="../style.css">
 		<link rel="stylesheet" type="text/css"  href="style.css">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<title>Selection Demo</title>
 	</head>
 	<body>
@@ -19,10 +21,11 @@
 						<li><h3><a href="selection3.html">Selection Demo 3</a></h3></li>
 				</ul>
 			</div>
-			<div id="bottom_nav">
-				<hr />
-				<a href="../index.html">Up: Home</a>
-			</div>
+		<hr>
+		<ul class="breadcrumb">
+			<li><a href="../index.html">Home</a></li>
+			<li class="active">Selection</a></li>
+		</ul>	
 		</article>
 	</body>
 </html>
