--- a/web-app/selection/selection2.html
+++ b/web-app/selection/selection2.html
@@ -14,25 +14,28 @@
 				});
 		</script>
 		<link rel="stylesheet" type="text/css" href="../style.css"/>
-		<link rel="stylesheet" href="style.css">	
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" type="text/css" href="../style.css" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">	
 	</head>
 	<body>
 		<article>
 			<div class="center" id="border">
 				<div>
+					<h1>Clone ()</h1>
 					<p>.clone() creates a deep copy of the set of matched elements. The downside of .clone() is that it produces elements with duplicate id attributes, which are supposed to be unique. Click on the first image on each row to make clones; click on any clone to remove it:</p>
 					<div><img class="mario" src="img/mario.png" alt="Mario" width="80" height="100"></div>
 					<div><img class="luigi" src="img/luigi.png" alt="Luigi" width="80" height="100"></div>
 					<div><img class="princess" src="img/princess.png" alt="Princess" width="80" height="100"></div>
 				</div>
-				<div id="bottom_nav">
-					<hr />
-					<ul>
-						<li><a href="index.html">Up:Index</a></li>
-						<li><a href="selection3.html">Next:Selection Demo 3: Dynamic Table</a></li>
-					</ul>
-				</div>   
 			</div>
+		<hr>
+		<ul class="breadcrumb">
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="index.html">Selection</a></li>
+			<li class="active">Clone()</li>
+		</ul>	
 		</article>		
 	 </body>
 </html>
