Changed UI design of the attributes section

--- a/web-app/attributes/demo1.html
+++ b/web-app/attributes/demo1.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<link rel="stylesheet" href="attributes.css" />
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,12 +20,15 @@
 			<div class="all-questions">
 				<div id="demo">This is a demo</div>
 			</div>
-			<div id="bottom_nav">
-				<hr>
-				<a href="index.html">Up:Index</a>
-			</div>
+			<hr>
+			<ul class="breadcrumb">
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="index.html">Attributes</a></li>
+				<li class="active">Demo</li>
+			</ul>	
 		</article>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="attributes.js"></script>
+
 	</body>
 </html>
