--- a/web-app/attributes/index.html
+++ b/web-app/attributes/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,10 +20,11 @@
 					<li><h3><a href="demo1.html">Attributes Demo 1</a></h3></li>
 				</ul>
 			</div>
-			<div id="bottom_nav">
-				<hr />
-				<a href="../index.html">Up:Home</a>
-			</div>
+			<hr>
+			<ul class="breadcrumb">
+				<li><a href="../index.html">Home</a></li>
+				<li class="active">Attributes</a></li>
+			</ul>	
 		</article>
 	</body>
 </html>
