--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css"  href="../style.css">
 		<link rel="stylesheet" type="text/css"  href="style.css">
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<title>Selection Demo</title>
 	</head>
