Added UI changes to Animation section

--- a/web-app/animation/animation.html
+++ b/web-app/animation/animation.html
@@ -5,6 +5,8 @@
         <link rel='stylesheet' type='text/css' href='animation.css'/>
         <link rel='stylesheet' type='text/css' href='../style.css'/>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js"></script>
 		<!--code highlighting -->
 		<link rel="stylesheet" href="../lib/highlight/styles/default.css">
@@ -20,6 +22,7 @@
 	</head>
 	<body>
 		<div>
+			<title>Animate()</title>
 			<p>Animation Demo 1 Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>
 		</div>
 		<div>
@@ -72,12 +75,12 @@
 
 });
 				</code>
-			<pre>
 		</div>
-		<div id="bottom_nav">
-			<hr />
-			<a href="index.html">Up: Index</a>
-			<a href="animation2.html">Next: Carousel Demo</a>
-		</div>
+		<hr>
+		<ul class="breadcrumb">
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="index.html">Animation</a></li>
+			<li class="active">Animate()</li>
+		</ul>
 	</body>
 </html>
