--- a/web-app/animation/index.html
+++ b/web-app/animation/index.html
@@ -7,6 +7,8 @@
 		<title>Animation Demo</title>
 		<link rel="stylesheet" type="text/css"  href="../style.css">
 		<link rel="stylesheet" type="text/css"  href="style.css">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 	</head>
 	<body>
 		<article>
@@ -20,10 +22,11 @@
 						<li><h3><a href="animation2.html">Animation Demo 2</a></h3></li>
 				</ul>
 			</div>
-			<div id="bottom_nav">
-				<hr>
-				<a href="../index.html">Up: Home</a>
-			</div>
+			<hr>
+			<ul class="breadcrumb">
+				<li><a href="../index.html">Home</a></li>
+				<li class="active">Animation</li>
+			</ul>	
 		</article>
 	</body>
 </html>
