--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -24,7 +24,7 @@
 		<hr>
 		<ul class="breadcrumb">
 			<li><a href="../index.html">Home</a></li>
-			<li class="active">Selection</a></li>
+			<li class="active">Selection</li>
 		</ul>	
 		</article>
 	</body>
