general fixes, updated ui

--- a/web-app/ajax/index.html
+++ b/web-app/ajax/index.html
@@ -7,7 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Ajax</title>
 		<link rel="stylesheet" type="text/css"  href="../style.css">
-		<link rel="stylesheet" type="text/css"  href="style.css">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 	</head>
 	<body >
 		<article >
@@ -25,10 +26,11 @@
 					<li><h3><a href="ajaxdemo.html">Ajax Demo 1</a></h3></li>
 				</ul>
 			</div>
-			<div id="bottom_nav">
-				<hr>
-				<a href="../index.html">Up:Home</a>
-			</div>
+		<hr>
+		<ul class="breadcrumb">
+			<li><a href="../index.html">Home</a></li>
+			<li class="active">AJAX</li>
+		</ul>
 		</article>
 	</body>
 </html>
