--- a/web-app/animation/animation.html
+++ b/web-app/animation/animation.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<div>
-			<title>Animate()</title>
+			<h1>Animate()</h1>
 			<p>Animation Demo 1 Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>
 		</div>
 		<div>
