--- a/web-app/ajax/ajaxdemo.html
+++ b/web-app/ajax/ajaxdemo.html
@@ -3,7 +3,8 @@
 	<head>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="ajax.js"></script>
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/bootswatch.css">
 		<link rel='stylesheet' type='text/css' href='../style.css'/>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,7 @@
 		<script src="../lib/highlight/highlight.pack.js"></script>
 		<script>
 		$(document).ready(function() {
-			$.get("ajaxdemo.html", function(data, status){
+			$.get("/ajaxdemo.html", function(data, status){
 				$('pre code').each(function(i, block) {
 				block.textContent= data;
 				});
@@ -30,8 +31,9 @@
 			<h1>Ajax Demo</h1>
 			<div class="all-questions">
                 <p>The example shown below utilizes JSONPlaceholder to show ajax requests<p>
+				<button class="btn btn-info" id="ajax-requestButton">Ajax Request</button>
                 <div><p id="ajax-result"><p></div>
-                <button id="ajax-requestButton">Ajax Request</button>
+                
 			</div>
 			<div>
 				<p>We can also use AJAX to have this page describe itself, notice how jQuery is used to colorize the code in this block. Be honest, that's pretty mind blowingly meta.</p>
@@ -40,11 +42,13 @@
 					<pre><code class="html"></code></pre>
 				</div>
       		</div>
-			<div id="bottom_nav">
-				<hr />
-				<a href="index.html">Up:Index</a>
-			</div>
-		</article>
+		<hr>
+		<ul class="breadcrumb">
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="index.html">AJAX</a></li>
+			<li class="active">AJAX Demo</li>
+		</ul>
 		<script type="text/javascript" src="ajax.js"></script>
+		</article>
 	</body>
 </html>
