--- a/web-app/ajax/ajaxdemo.html
+++ b/web-app/ajax/ajaxdemo.html
@@ -15,7 +15,7 @@
 		<script src="../lib/highlight/highlight.pack.js"></script>
 		<script>
 		$(document).ready(function() {
-			$.get("/ajaxdemo.html", function(data, status){
+			$.get("ajaxdemo.html", function(data, status){
 				$('pre code').each(function(i, block) {
 				block.textContent= data;
 				});
